@@ -1,3 +1,10 @@
+2009-07-28 Maximilien Cuony
+    * Fix gmail problem
+    * Fix problem with foward in gmail
+
+2009-07-27 Maximilien Cuony
+    * Adding some parameters to very for DTA
+
 2009-07-26 Maximilien Cuony
     * 0.7.7 released !
     * New icon theme
